--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,33 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTab {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin onSmallDekstop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin headerSpecial {
+  @media (min-width: 1254px) {
+    @content;
+  }
+}
+
+@mixin onBigDekstop {
+  @media (min-width: 1600px) {
+    @content;
+  }
+}
+
+@mixin onLargeDekstop {
+  @media (min-width: 2560px) {
+    @content;
+  }
+}
