--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/nav.scss";
+@import "blocks/slider.scss";
+@import "blocks/header.scss";
+@import "blocks/grid.scss";
+@import "blocks/button.scss";
+@import "blocks/arrow.scss";
+@import "blocks/about-us.scss";
+@import "blocks/our-expertise.scss";
+@import "blocks/menu.scss";
+@import "blocks/card.scss";
+@import "blocks/section.scss";
+@import "blocks/box.scss";
+@import "blocks/form.scss";
+@import "blocks/footer.scss";
